# slop-doc

./: README.md  pyproject.toml  slop-doc-instruction.md
.claude/: settings.local.json
docs/assets/: style.css
docs/templates/: su4ka.dtmpl
example/: .sdoc.tree
example/docs/: .sdoc.tree
example/src/dataflow/: pipeline.py
pydocgen/: builder.py  cross_links.py  parser.py  template_engine.py
slop_doc/: builder.py  cross_links.py  frontmatter.py  layout.py  parser.py  sdoc_preprocessor.py  tag_renderer.py  tree_builder.py
slop_doc/defaults/: .sdoc.tree  app.js  search.js  slop-doc-instruction.md  style.css
slop_doc/defaults/templates/: default_main_page.dtmpl
src/dataflow/: pipeline.py
tests/: test_cross_links.py  test_sdoc_preprocessor.py
