[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slop-doc"
version = "1.2.2"
description = "Static documentation generator for Python projects"
readme = "README.md"
authors = [{name = "Ar4o"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "markdown",
    "watchdog",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
slop-doc = "slop_doc.builder:main"

[tool.setuptools.package-data]
slop_doc = ["defaults/*.css", "defaults/*.js"]

[tool.setuptools.packages.find]
where = ["."]
